--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,26 @@
+*{
+  margin: 0;
+  padding: 0;
+  outline: 0;
+  box-sizing: border-box;
+}
+
 .App {
   text-align: center;
 }
 .Container-mensagens{
   width: 600px;
+  height: 90vh;
   display: flex;
   align-items: center;
   flex-direction: column;
-  margin-bottom: 20px;
+  margin-bottom: 20px; 
+  background-color: #D6D58E;
+
 }
 .Container{
+  margin-top: 20px;
+  height: 90vh;
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -16,13 +28,16 @@
 }
 .componenteEu{
   background-color: #61dafb;
+  max-width: 100px;
   min-width: 100px;
   border-radius: 2rem;
   display: flex;
   align-items: center;
   justify-content: center;
-  align-self: flex-start;
+  align-self: flex-end;
+  margin-bottom: 10px;
   flex-direction: column;
+  /* overflow: auto; */
 
 }
 
@@ -33,37 +48,11 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  align-self: flex-end;
+  align-self: flex-start;
   flex-direction: column;
+  box-sizing: 20px;
+  margin-bottom: 10px;
+  
+  /* overflow: auto; */
 
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
