--- a/src/components/SandMassage/styled.css
+++ b/src/components/SandMassage/styled.css
@@ -1,11 +1,13 @@
 .layout{
     background-color: red;
     width: 600px;
+    height: 100%;
     /* margin: 40px 80px; */
     flex-direction: row;
     display: flex;
     justify-content: space-between;
     position: relative;
+    /* top: 200px; */
 }
 
 .pessoa{
